--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <body>
 <section id="home"> <!--HEADER -->
     <header class="nav-header">
-        <h2>World Temperatures <span id="time"></span> local time</h2> 
+        <h2>Weather on <span id="time"></span> local time</h2> 
     </header>
-        <div class="content"> <!-- TOP CONTEN IN HEADER COLOR -->
+        <div class="content"> <!-- TOP CONTENT IN HEADER COLOR -->
     </div> <!-- END DIV WHERE HEADER CHANGES COLOR-->
 <section id="weather">
+    <h3>Click to view the local weather in real time</h3>
     <div class="fade-in">
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/2b/NYC_Downtown_Manhattan_Skyline_seen_from_Paulus_Hook_2019-12-20_IMG_7347_FRD_%28cropped%29.jpg" onclick="toggleWeather('NYC', 'weatherData1')">
         <pre id="weatherData1" style="font-size: 75%"></pre>
@@ -84,13 +85,11 @@
 </ul>
     </details>
         </section>
- <!-- SCRIPT-->   
-            <script src="main.js"></script>
 <!-- FOOTER-->
         <footer>
             <a href="#home">TOP</a>
                 <br>
-                    <p>Weather Info From <a href="https://github.com/chubin/wttr.in"target="_blank">WTTR</a> </p>
+                    <p>Weather API From <a href="https://github.com/chubin/wttr.in"target="_blank">WTTR</a> </p>
                 <p>
             </footer>
     </body>
