--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Sydney_skyline_from_the_north_August_2016_%2829009142591%29.jpg" onclick="toggleWeather('Sydney', 'weatherData3')">
             <pre id="weatherData3" style="font-size: 75%"></pre>
         </div>
+      <div class="fade-in">
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/30/Echo_Park_Lake_with_Downtown_Los_Angeles_Skyline.jpg" onclick="toggleWeather('Los Angeles', 'weatherData4')">
         <pre id="weatherData4" style="font-size: 75%"></pre>
+          </div>
             <div class="fade-in">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Eiffel_Tower_from_the_Tour_Montparnasse%2C_1_May_2012_N2.jpg" onclick="toggleWeather('paris', 'weatherData5')">
     <pre id="weatherData5" style="font-size: 75%"></pre>  
@@ -85,6 +87,7 @@
 </ul>
     </details>
         </section>
+     <script src="main.js"></script>
 <!-- FOOTER-->
         <footer>
             <a href="#home">TOP</a>
