--- a/index.html
+++ b/index.html
@@ -93,5 +93,5 @@
                 <p>
             </footer>
     </body>
-<script src ="app.js"></script>
+<script src ="main.js"></script>
 </html>
